--- a/admin.html
+++ b/admin.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Devillers Jerome | TheatreVR</title>
+    <title>Devillers Jerome | TheatreVR ¬ Admin</title>
     <style>
       * { margin: 0; padding: 0; box-sizing: border-box; }
       body { font: 13px Helvetica, Arial; }
@@ -16,12 +16,19 @@
   </head>
   <body>
     <ul id="messages"></ul>
-    
+    <form action="">
+      <input id="m" autocomplete="off" /><button>Send</button>
+    </form>
     <script src="https://cdn.socket.io/socket.io-1.2.0.js"></script>
     <script src="https://code.jquery.com/jquery-1.11.1.js"></script>
     <script>
       $(function () {
         var socket = io();
+        $('form').submit(function(){
+          socket.emit('chat message', $('#m').val());
+          $('#m').val('');
+          return false;
+        });
         socket.on('chat message', function(msg){
           $('#messages').append($('<li>').text(msg));
           window.scrollTo(0, document.body.scrollHeight);
